<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/back2"
    android:orientation="vertical"
    android:gravity="center">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fa_heart"
        android:textColor="@android:color/white"
        android:textSize="100dp"
        android:gravity="center"
        android:id="@+id/heart"
        android:layout_marginBottom="20dp"/>
    <EditText
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/username"
        android:inputType="text"
        android:maxLines="1"
        android:textColor="@color/colorAccent"
        android:hint="@string/fa_user_o"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textColor="@color/colorAccent"
        android:hint="@string/fa_lock"
        android:layout_marginBottom="10dp"/>

    <Button
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Register"
        android:id="@+id/registerButton"
        android:background="@color/dot_light_Screen2"
        android:layout_marginBottom="20dp"/>
    <TextView
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Login"
        android:textColor="@android:color/white"
        android:textSize="20dp"
        android:layout_gravity="bottom|center"
        android:gravity="center"
        android:id="@+id/login"/>
    <LinearLayout
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fa_facebook"
            android:textColor="@color/colorPrimary"
            android:textSize="30dp"
            android:id="@+id/f_log"
            android:layout_marginLeft="5dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fa_google_plus"
            android:textColor="@color/colorAccent"
            android:textSize="35dp"
            android:id="@+id/g_log"
            android:layout_marginLeft="15dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fa_twitter"
            android:textColor="@color/statuts"
            android:layout_marginLeft="15dp"
            android:textSize="35dp"
            android:id="@+id/t_log"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fa_instagram"
            android:textColor="@color/dot_dark_Screen2"
            android:textSize="35dp"
            android:id="@+id/i_log"
            android:layout_marginLeft="15dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fa_pinterest"
            android:textColor="@color/dot_dark_Screen4"
            android:textSize="35dp"
            android:id="@+id/p_log"
            android:layout_marginLeft="15dp"

            />
    </LinearLayout>
</LinearLayout>